meu-projeto-flask-1/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-projeto-flask
spec:
  selector:
    app: meu-projeto-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meu-projeto-flask
spec:
  hosts:
    - meu-projeto-flask
  http:
    - route:
        - destination:
            host: meu-projeto-flask
            port:
              number: 80
